--- a/style.css
+++ b/style.css
@@ -104,8 +104,9 @@
         .hero-section {
             text-align: center;
             padding: 4rem 1rem;
-            border-radius: 1.5rem;
+            /* border-radius: 1.5rem; */
             margin-bottom: 3rem;
+            margin-top: 3rem;
             box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
             background-color: var(--card-bg);
         }
