--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@
         .hero-section {
             text-align: center;
             padding: 4rem 1rem;
-            /* border-radius: 1.5rem; */
+            border-radius: 1.5rem; 
             margin-bottom: 3rem;
             margin-top: 3rem;
             box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
@@ -319,7 +319,7 @@
             display: none;
         }
         
-        /* Language-specific styles for Arabic */
+        /* / Language-specific styles for Arabic / */
         [lang="ar"] {
             direction: rtl;
         }
@@ -333,7 +333,7 @@
           text-align: right;
         }
 
-        /* App Details Page Styles */
+        /* / App Details Page Styles / */
         .app-details-content {
             padding: 2rem;
             text-align: center;
